Bug 444882 - Unable to connect to OpenVPN server with passphrase secured .p12 certificate
Summary: Unable to connect to OpenVPN server with passphrase secured .p12 certificate
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Networking in general (other bugs)
Version First Reported In: master
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Jan Grulich
URL:
Keywords:
: 444167 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-11-03 14:28 UTC by Joern
Modified: 2024-12-23 18:23 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.23.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Joern 2021-11-03 14:28:47 UTC
SUMMARY
Since plasma-nm 5.23 I'm unable to connecto to a OpenVPN server with a passphrase secured .p12 certificate. It does works with plain openvpn client on console and also with nmcli but not with plasma-nm. The passphrase is being asked before connection, and it breaks right afterwards.

Passphrase less certificates does also works.


OBSERVED RESULT
OpenVPN connection fails

EXPECTED RESULT
OpenVPN connection is being established

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Archlinux
(available in About System)
KDE Plasma Version: 5.23.2
KDE Frameworks Version: 5.87.0
Qt Version: 5.12.2

ADDITIONAL INFORMATION
Logs: 
Nov 03 15:19:57 alaska systemsettings5[55688]: QDBusObjectPath: invalid path ""
Nov 03 15:19:57 alaska audit[707]: USYS_CONFIG pid=707 uid=0 auid=4294967295 ses=4294967295 msg='op=connection-activate uuid=f0e6c827-300c-4595-9513-a49d3d2c9d5d name="INJKatALASKA-TO-IPFire" pid=55688 uid=1000 result=success exe="/usr/bin/NetworkManager" hostname=? addr=? terminal=? res=success'
Nov 03 15:19:57 alaska NetworkManager[707]: <info>  [1635949197.9503] audit: op="connection-activate" uuid="f0e6c827-300c-4595-9513-a49d3d2c9d5d" name="INJKatALASKA-TO-IPFire" pid=55688 uid=1000 result="success"
Nov 03 15:19:57 alaska kernel: audit: type=1111 audit(1635949197.947:5345): pid=707 uid=0 auid=4294967295 ses=4294967295 msg='op=connection-activate uuid=f0e6c827-300c-4595-9513-a49d3d2c9d5d name="INJKatALASKA-TO-IPFire" pid=55688 uid=1000 result=success exe="/usr/bin/NetworkManager" hostname=? addr=? terminal=? res=success'
Nov 03 15:19:57 alaska NetworkManager[707]: <info>  [1635949197.9544] vpn-connection[0x55a570ad2790,f0e6c827-300c-4595-9513-a49d3d2c9d5d,"INJKatALASKA-TO-IPFire",0]: Started the VPN service, PID 63377
Nov 03 15:19:57 alaska NetworkManager[707]: <info>  [1635949197.9628] vpn-connection[0x55a570ad2790,f0e6c827-300c-4595-9513-a49d3d2c9d5d,"INJKatALASKA-TO-IPFire",0]: Saw the service appear; activating connection
Nov 03 15:19:57 alaska kded5[3913]: plasma-nm: Unhandled VPN connection state change:  2
Nov 03 15:19:57 alaska DiscoverNotifier[4204]: "Das Objekt existiert nicht am Pfad »/org/freedesktop/NetworkManager/ActiveConnection/2«"
Nov 03 15:19:57 alaska kdeconnectd[4193]: "Das Objekt existiert nicht am Pfad »/org/freedesktop/NetworkManager/ActiveConnection/2«"
Nov 03 15:19:57 alaska kded5[3913]: "Das Objekt existiert nicht am Pfad »/org/freedesktop/NetworkManager/ActiveConnection/2«"
Nov 03 15:19:57 alaska kdeconnectd[4193]: "Das Objekt existiert nicht am Pfad »/org/freedesktop/NetworkManager/ActiveConnection/1«"
Nov 03 15:19:57 alaska DiscoverNotifier[4204]: "Das Objekt existiert nicht am Pfad »/org/freedesktop/NetworkManager/ActiveConnection/1«"
Nov 03 15:19:57 alaska kded5[3913]: "Das Objekt existiert nicht am Pfad »/org/freedesktop/NetworkManager/ActiveConnection/1«"
Nov 03 15:19:57 alaska kded5[3913]: plasma-nm: virtual NMVariantMapMap SecretAgent::GetSecrets(const NMVariantMapMap&, const QDBusObjectPath&, const QString&, const QStringList&, uint)
Nov 03 15:19:57 alaska kded5[3913]: plasma-nm: Path: "/org/freedesktop/NetworkManager/Settings/7"
Nov 03 15:19:57 alaska kded5[3913]: plasma-nm: Setting name: "vpn"
Nov 03 15:19:57 alaska kded5[3913]: plasma-nm: Hints: ()
Nov 03 15:19:57 alaska kded5[3913]: plasma-nm: Flags: 4
Nov 03 15:19:57 alaska kded5[3913]: "Das Objekt existiert nicht am Pfad »/org/freedesktop/NetworkManager/ActiveConnection/2«"
Nov 03 15:19:57 alaska DiscoverNotifier[4204]: "Das Objekt existiert nicht am Pfad »/org/freedesktop/NetworkManager/ActiveConnection/2«"
Nov 03 15:19:57 alaska kdeconnectd[4193]: "Das Objekt existiert nicht am Pfad »/org/freedesktop/NetworkManager/ActiveConnection/2«"
Nov 03 15:19:57 alaska kded5[3913]: "Das Objekt existiert nicht am Pfad »/org/freedesktop/NetworkManager/ActiveConnection/1«"
Nov 03 15:19:57 alaska DiscoverNotifier[4204]: "Das Objekt existiert nicht am Pfad »/org/freedesktop/NetworkManager/ActiveConnection/1«"
Nov 03 15:19:57 alaska kdeconnectd[4193]: "Das Objekt existiert nicht am Pfad »/org/freedesktop/NetworkManager/ActiveConnection/1«"
Nov 03 15:19:57 alaska kded5[3913]: plasma-nm: virtual NMVariantMapMap SecretAgent::GetSecrets(const NMVariantMapMap&, const QDBusObjectPath&, const QString&, const QStringList&, uint)
Nov 03 15:19:57 alaska kded5[3913]: plasma-nm: Path: "/org/freedesktop/NetworkManager/Settings/7"
Nov 03 15:19:57 alaska kded5[3913]: plasma-nm: Setting name: "vpn"
Nov 03 15:19:57 alaska kded5[3913]: plasma-nm: Hints: ()
Nov 03 15:19:57 alaska kded5[3913]: plasma-nm: Flags: 5
Nov 03 15:19:59 alaska DiscoverNotifier[4204]: "Das Objekt existiert nicht am Pfad »/org/freedesktop/NetworkManager/ActiveConnection/2«"
Nov 03 15:19:59 alaska kdeconnectd[4193]: "Das Objekt existiert nicht am Pfad »/org/freedesktop/NetworkManager/ActiveConnection/2«"
Nov 03 15:19:59 alaska kded5[3913]: "Das Objekt existiert nicht am Pfad »/org/freedesktop/NetworkManager/ActiveConnection/2«"
Nov 03 15:19:59 alaska NetworkManager[707]: <error> [1635949199.4976] vpn-connection[0x55a570ad2790,f0e6c827-300c-4595-9513-a49d3d2c9d5d,"INJKatALASKA-TO-IPFire",0]: final secrets request failed to provide sufficient secrets
Nov 03 15:19:59 alaska DiscoverNotifier[4204]: "Das Objekt existiert nicht am Pfad »/org/freedesktop/NetworkManager/ActiveConnection/1«"
Nov 03 15:19:59 alaska NetworkManager[707]: <info>  [1635949199.5058] vpn-connection[0x55a570ad2790,f0e6c827-300c-4595-9513-a49d3d2c9d5d,"INJKatALASKA-TO-IPFire",0]: VPN plugin: state changed: stopped (6)
Comment 1 Bug Janitor Service 2021-11-03 16:09:26 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-nm/-/merge_requests/90
Comment 2 Jan Grulich 2021-11-03 16:11:27 UTC
Will you be able to test the merge request mentioned above?
Comment 3 Joern 2021-11-03 18:16:44 UTC
(In reply to Jan Grulich from comment #2)
> Will you be able to test the merge request mentioned above?

Yes. The merge request works without any problems. Thank you for the really fast fix!
Comment 4 Jan Grulich 2021-11-04 12:59:48 UTC
Git commit b03c7e8f6340c1f1b8d7d78230d5b77cf491c1e6 by Jan Grulich.
Committed on 03/11/2021 at 16:08.
Pushed by grulich into branch 'master'.

OpenVPN: fix logic in auth dialog

M  +3    -3    vpn/openvpn/openvpnauth.cpp

https://invent.kde.org/plasma/plasma-nm/commit/b03c7e8f6340c1f1b8d7d78230d5b77cf491c1e6
Comment 5 Jan Grulich 2021-11-04 13:00:17 UTC
Git commit 1c3b2a2364e6d94a184bd9f70b88cfbb007d9428 by Jan Grulich.
Committed on 04/11/2021 at 13:00.
Pushed by grulich into branch 'cherry-pick-b03c7e8f'.

OpenVPN: fix logic in auth dialog


(cherry picked from commit b03c7e8f6340c1f1b8d7d78230d5b77cf491c1e6)

M  +3    -3    vpn/openvpn/openvpnauth.cpp

https://invent.kde.org/plasma/plasma-nm/commit/1c3b2a2364e6d94a184bd9f70b88cfbb007d9428
Comment 6 Jan Grulich 2021-11-04 13:00:52 UTC
Git commit 48fad4ac77520d673414ef957e6dedc4d151eb73 by Jan Grulich.
Committed on 04/11/2021 at 13:00.
Pushed by grulich into branch 'Plasma/5.23'.

OpenVPN: fix logic in auth dialog


(cherry picked from commit b03c7e8f6340c1f1b8d7d78230d5b77cf491c1e6)

M  +3    -3    vpn/openvpn/openvpnauth.cpp

https://invent.kde.org/plasma/plasma-nm/commit/48fad4ac77520d673414ef957e6dedc4d151eb73
Comment 7 Jan Grulich 2021-11-10 07:02:50 UTC
*** Bug 444167 has been marked as a duplicate of this bug. ***
Comment 8 Ben Cooksley 2024-12-23 18:23:39 UTC
Bulk transfer as requested in T17796