OpenVPN: fix logic in auth dialog

BUG:444882